Fix width of Term select input on mobile.

--- a/web-app/css/proxy.css
+++ b/web-app/css/proxy.css
@@ -334,6 +334,7 @@ p.notification-msg {
 
 .proxy-top-input {
     margin-top: 10px;
+    width: 100%;
 }
 
 .proxy-section-heading {
